# api-security-platform

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
configs/: fast_scan.yaml  full_scan.yaml  quick_scan.yaml
dashboard/: manage.py  test_live_scan.py
dashboard/horsesec_dashboard/: celery.py  settings.py  urls.py  wsgi.py
dashboard/scanner/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
dashboard/scanner/migrations/: 0001_initial.py
dashboard/static/js/: scan_progress.js
docs/: project-vision.md
docs/01-planning/: project-plan.md
docs/02-architecture/: cors.html  data-models.md  severity-levels.md  system-design.md
docs/03-development/: setup.md
docs/architecture/: initial-design.md
reports/: security_scan_google_com_20251008_100035.html  security_scan_google_com_20251008_103537.html  security_scan_jsonplaceholder_typicode_com_20251008_085415.html  security_scan_www_google_com_20251008_084348.html
src/reports/: security_scan_httpbin_org_json_20251006_162737.html  security_scan_httpbin_org_json_20251006_200959.html  security_scan_httpbin_org_json_20251006_203332.html  security_scan_www_google_com_20251006_163152.html  security_scan_www_google_com_20251006_204156.html
src/security_scanner/: __init__.py  cli.py
src/security_scanner/core/: __init__.py  config_manager.py  models.py  scanner.py
src/security_scanner/detectors/: __init__.py  base.py  cors.py  headers.py  jwt.py  sql_injection.py  xss.py
src/security_scanner/http/: client.py
tests/unit/: test_scanner.py
(+17 files in other folders)
